# StockView-PWA

./: .env.example  .gitignore  CLAUDE.md  README.md  SPEC.md  setup.bat  start.bat  stop.bat
backend/: pyproject.toml
backend/app/: auth.py  config.py  db.py  main.py  models.py
backend/app/api/: alerts.py  auth_router.py  exchange_rate.py  narrative.py  push_router.py  search.py  stocks.py  thesis.py  watchlist.py
backend/app/prompts/: templates.py
backend/app/services/: alert_checker.py  email_service.py  fundamentals.py  market_data.py  meta.py  narrative.py  news.py  push_service.py  search.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  main.jsx  sw.js
frontend/src/components/: CustomPeriodPanel.jsx  FundamentalsTable.jsx  NarrativeSection.jsx  NewsFeed.jsx  PriceChart.jsx  ProtectedRoute.jsx  PushNotificationToggle.jsx  SearchBar.jsx  StockHeader.jsx  ThesisEditor.jsx  TickerAutocomplete.jsx  Watchlist.jsx
frontend/src/components/layout/: Layout.jsx  NavBar.jsx  Sidebar.jsx  ThemeToggle.jsx
frontend/src/context/: ThemeContext.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/hooks/: usePushNotifications.js
frontend/src/lib/: api.js
frontend/src/pages/: AlertsPage.jsx  ComparePage.jsx  LoginPage.jsx
supabase/: schema.sql
supabase/migrations/: 001_add_consecutive_down_days_alert.sql  002_add_consecutive_up_days.sql  003_add_price_change_pct.sql
